--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icone sebo .png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>suspence sebo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="admin-banner">
-        <div class="admin-content">
-            <h1>O Labirinto das Páginas Esquecidas</h1>
-            <p class="admin-description">
-                Existem obras que guardam mais do que palavras; guardam confissões e enigmas. Decifre a verdade por trás de manuscritos sombrios e bibliotecas que escondem ecos do passado. Cada capítulo é um passo em direção ao escuro, e nem todo livro quer ser fechado.
-            </p>
-        </div>
+
+<div class="header-container">
+    <h1>Seja bem-vindo</h1>
+    <h2 class="imagem-rotativa">
+        <span>ao espaço suspense</span>
+    </h2>
+</div>
+
+<div class="galeria-wrapper">
+    <button class="btn-nav btn-prev" onclick="moverGaleria(-1)">❮</button>
+    
+    <div class="imgg" id="galeria">
+        <img src="susp1.png" alt="Suspense 1">
+        <img src="susp2.png" alt="Suspense 2">
+        <img src="susp3.png" alt="Suspense 3">
+        <img src="susp4.png" alt="Suspense 4">
+        <img src="susp5.png" alt="Suspense 5">
+        <img src="susp6.png" alt="Suspense 6">
     </div>
-</body>
- <div class="imgg" id="galeria">
-            <img src="susp1.png" alt="">
-            <img src="susp2.png" alt="">
-            <img src="susp3.png" alt="">
-            <img src="susp4.png" alt="">
-            <img src="susp5.png" alt="">
-            <img src="susp6.png" alt="">
-        </div>
+
+    <button class="btn-nav btn-next" onclick="moverGaleria(1)">❯</button>
+</div>
+
 <div class="secao-conversao">
     <h1>O Acervo que o Tempo Tentou Esconder</h1>
     <p>Milhares de páginas esquecidas aguardam por um novo dono. Entre no nosso sebo e resgate a história que mais te desafia.</p>
@@ -32,6 +39,17 @@
         EXPLORAR O SITE <span class="seta-btn">→</span>
     </a>
 </div>
+
+<script>
+    function moverGaleria(direcao) {
+        const galeria = document.getElementById('galeria');
+        const scrollAmount = 350; // Quantidade de pixels que a galeria pula ao clicar
+        galeria.scrollBy({
+            left: direcao * scrollAmount,
+            behavior: 'smooth'
+        });
+    }
+</script>
     
 </body>
 </html>
