--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="secao-conversao">
     <h1>O Acervo que o Tempo Tentou Esconder</h1>
     <p>Milhares de páginas esquecidas aguardam por um novo dono. Entre no nosso sebo e resgate a história que mais te desafia.</p>
-    <a href="https://sebo-so-ler.base44.app/" class="btn-marketing-direto">
+    <a href="https://sebo-so-ler.base44.app/Home?category=suspense" class="btn-marketing-direto">
         EXPLORAR O SITE <span class="seta-btn">→</span>
     </a>
 </div>
